# antoskape-project

./: .gitignore  CODEOWNERS.yaml  README.md  pytest.ini  requirements-extras.txt  udev_mapping.txt  west.yml
.github/scripts/: bluetooth_setup.sh  get_tests_list.py  get_tests_list.sh  meta_report.py  output_tests_list.py  prepare_ci_report_files.py  remove_udev_mapping_serial_ports.sh  report_template.html  run_tests.py  test_report_email.py  tests_metadata_parser.py  tests_yaml_parser.py  udev_mapping_serial_ports.sh  zephyr_workspace_init.sh
.github/workflows/: build.yml  nordic-sdk.yml  reports-summary-publish.yml  test.yml  testing.yml
app/: debug.conf  prj.conf  sample.yaml
app-esp32/blinky/: CMakeLists.txt  sample.yaml
app-esp32/blinky/src/: main.c
app/src/: main.c
documentation/: Add_new_board_to_project.md  Artifactory_storage_server.md  BLE_terms_definitions.md  Github_workflow_dispatch_panel.md  HW_resources_for_test.md  HW_resources_for_tests.md  Kconfig_tester_guide.md  MCUmgr_subsystem.md  Raspi_runner_installation.md  Shell_commands_with_native_sim.md  Shell_tests_with_native_sim.md  Simulation_emulation_principles.md  Tests_list.md  Tests_user_guide.md  spi_emulation_guide.md
scripts/: get_tests_list.sh
test/: readme.txt
test/basic/: testcase.yaml
test/mcumgr/: testcase.yaml
test/shell/: prj.conf  testcase.yaml
tests/: conftest.py
tests/tools/: tools.py
tests/unit_tests/dut/gpio_pins_ztest/: CMakeLists.txt  TESTINFO.md  testcase.yaml
tests/unit_tests/dut/gpio_pins_ztest/boards/: esp32s3_devkitc.overlay
tests/unit_tests/dut/gpio_pins_ztest/src/: main.c
tools/: github-api-run-workflows.py
(+164 files in other folders)
